update yaml properties file.
for solving conflict.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: "Jekyll Resume Template"
-description: "A resume template for Jekyll and GitHub Pages sites."
+title: "Jekyll Resume Template, update sentence."
+description: "A resume template for yy, and today is may 2nd."
 
 # Build settings
 markdown: kramdown
